--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -321,7 +321,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_13689/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+                        "/tmp/ipykernel_580/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
                         "  null_counts_per_year = df_Bilancino.groupby('Year').apply(lambda x: x.isnull().sum())\n"
                     ]
                 }
@@ -446,7 +446,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_13689/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Lake_Level'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -464,7 +464,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_13689/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Flow_Rate'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -580,9 +580,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_13689/716599735.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/716599735.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  decomp_lake_level = seasonal_decompose(df_Bilancino['Lake_Level'].fillna(method='ffill'), model='additive', period=365)\n",
-                        "/tmp/ipykernel_13689/716599735.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/716599735.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  decomp_flow_rate = seasonal_decompose(df_Bilancino['Flow_Rate'].fillna(method='ffill'), model='additive', period=365)\n"
                     ]
                 },
@@ -649,9 +649,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_13689/2511227491.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/2511227491.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_acf(df_Bilancino['Lake_Level'].fillna(method='ffill'), lags=50, ax=ax[0])\n",
-                        "/tmp/ipykernel_13689/2511227491.py:7: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/2511227491.py:7: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_pacf(df_Bilancino['Lake_Level'].fillna(method='ffill'), lags=50, ax=ax[1])\n"
                     ]
                 },
@@ -669,9 +669,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_13689/2511227491.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/2511227491.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_acf(df_Bilancino['Flow_Rate'].fillna(method='ffill'), lags=50, ax=ax[0])\n",
-                        "/tmp/ipykernel_13689/2511227491.py:16: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/2511227491.py:16: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_pacf(df_Bilancino['Flow_Rate'].fillna(method='ffill'), lags=50, ax=ax[1])\n"
                     ]
                 },
@@ -719,14 +719,21 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 13,
             "metadata": {},
             "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "ADF Test for Lake Level:\n"
+                    ]
+                },
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_13689/2161570014.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/2161570014.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  adf_test(df_Bilancino['Lake_Level'].fillna(method='ffill'))\n"
                     ]
                 },
@@ -734,7 +741,6 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "ADF Test for Lake Level:\n",
                         "ADF Statistic: -5.702961\n",
                         "p-value: 0.000001\n",
                         "Critical Values:\n",
@@ -743,7 +749,21 @@
                         "\t10%: -2.567\n",
                         "The series is stationary\n",
                         "\n",
-                        "ADF Test for Flow Rate:\n",
+                        "ADF Test for Flow Rate:\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/tmp/ipykernel_580/2161570014.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "  adf_test(df_Bilancino['Flow_Rate'].fillna(method='ffill'))\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
                         "ADF Statistic: -10.092709\n",
                         "p-value: 0.000000\n",
                         "Critical Values:\n",
@@ -751,14 +771,6 @@
                         "\t5%: -2.862\n",
                         "\t10%: -2.567\n",
                         "The series is stationary\n"
-                    ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "/tmp/ipykernel_13689/2161570014.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-                        "  adf_test(df_Bilancino['Flow_Rate'].fillna(method='ffill'))\n"
                     ]
                 }
             ],
@@ -796,14 +808,21 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 14,
             "metadata": {},
             "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Performing stepwise search to minimize aic\n"
+                    ]
+                },
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_13689/2796266614.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_580/3161178406.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sarima_model = auto_arima(df_Bilancino['Flow_Rate'].fillna(method='ffill'),\n"
                     ]
                 },
@@ -811,7 +830,25 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Performing stepwise search to minimize aic\n"
+                        " ARIMA(2,0,2)(1,0,1)[52] intercept   : AIC=26135.279, Time=20.50 sec\n",
+                        " ARIMA(0,0,0)(0,0,0)[52] intercept   : AIC=34199.863, Time=0.06 sec\n",
+                        " ARIMA(1,0,0)(1,0,0)[52] intercept   : AIC=26513.087, Time=11.91 sec\n"
+                    ]
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mNo se puede ejecutar el código, la sesión se ha eliminado. Intente reiniciar el kernel."
+                    ]
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mEl Kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. Revise el código de las celdas para identificar una posible causa del error. Haga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. Vea el [registro] de Jupyter (command:jupyter.viewOutput) para obtener más detalles."
                     ]
                 }
             ],
@@ -821,7 +858,7 @@
                 "\n",
                 "# Find the best SARIMA model\n",
                 "sarima_model = auto_arima(df_Bilancino['Flow_Rate'].fillna(method='ffill'), \n",
-                "                          seasonal=True, m=365,  # m=365 indicates yearly seasonality\n",
+                "                          seasonal=True, m=52, # weekly iteration. (he tenido que bajar el seasonal period a semanal y poner un máximo de iteraciones por búsqueda para que mi ordenador pudiera entrenar el modelo)\n",
                 "                          trace=True,\n",
                 "                          error_action='warn',  \n",
                 "                          suppress_warnings=True,\n",
@@ -832,7 +869,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
