--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -16,7 +16,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
@@ -139,7 +139,7 @@
                             "4       0.31  "
                         ]
                     },
-                    "execution_count": 2,
+                    "execution_count": 1,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -159,7 +159,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -232,7 +232,7 @@
                             "4  07/06/2002      249.44       0.31"
                         ]
                     },
-                    "execution_count": 3,
+                    "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -246,7 +246,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -267,7 +267,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -277,7 +277,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -287,7 +287,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -321,7 +321,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_580/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+                        "/tmp/ipykernel_7457/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
                         "  null_counts_per_year = df_Bilancino.groupby('Year').apply(lambda x: x.isnull().sum())\n"
                     ]
                 }
@@ -343,7 +343,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -416,7 +416,7 @@
                             "581 2004-01-05      251.37        0.5"
                         ]
                     },
-                    "execution_count": 8,
+                    "execution_count": 7,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -439,14 +439,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_580/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Lake_Level'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -464,7 +464,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_580/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Flow_Rate'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -510,7 +510,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
@@ -554,13 +554,24 @@
             "metadata": {},
             "source": [
                 "Explicar conclusiones:\n",
-                "Lake Level: La proximidad entre la media y mediana así como el estrecho rango interquartil muestra la estabilidad del \"lake level\" donde la mayoria de los valores se agrupan cerca de la media. Hay muy poca varianza entre los valores del \"lake level\". Se observa que el nivel del agua se mantiene casi siempre en un rango similar sin observarse grandes variaciones en el mismo.\n",
+                "Lake Level: \n",
+                "\n",
+                "La proximidad entre la media y mediana así como el estrecho rango interquartil muestra la estabilidad del \"lake level\" donde la mayoria de los valores se agrupan cerca de la media. Hay muy poca varianza entre los valores del \"lake level\". Ello muestra una distribción bastante simétrica.\n",
+                "\n",
+                "Se observa que el nivel del agua se mantiene casi siempre en un rango similar sin observarse grandes variaciones en el mismo.\n",
+                "\n",
+                "Flow rate:\n",
+                "\n",
+                "Observamos un nivel de varianza mucho más grande en el flow rate. (de 4 a 17 unidades). La mediana es significativamente más baja que la media lo que sugiere una distribución con muchos valores bajos y algunos valores muy elevados que suben la media. (Probablemente correspondiente a los momentos puntuales de lluvias intensas). \n",
+                "\n",
+                "Comparativa:\n",
+                "\n",
+                "El Lake Level es mucho más estable y tiene una menor variabilidad en comparación con el flow rate. Esto se refleja en la menor varianza y desviación estándar del nivel del lago.\n",
+                "\n",
+                "Mientras que el Lake level tiene un rango relativamente estrecho, el flow rate tiene un rango mucho mas amplio (9 vs 74 unidades). El flow rate está más sujeto a variaciones más extremas.\n",
                 "\n",
                 "\n",
-                "\n",
-                "Observamos un nivel de varianza muy grande en el flow rate. Hay momentos en los que el \n",
-                "\n",
-                "Falta de datos exogenos.\n",
+                "Problema: Falta de datos exogenos.\n",
                 "Un problema del dataset escodigo es que no tenemos datos exógenos del lago como por ejemplo la temperatura y o la lluvía durante este periodo de tiempo. Ello hace que no podamos analizar el impacto de dichas variables exógenas en el nivel del agua y en su velocidad de movimiento."
             ]
         },
@@ -573,16 +584,16 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_580/716599735.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/716599735.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  decomp_lake_level = seasonal_decompose(df_Bilancino['Lake_Level'].fillna(method='ffill'), model='additive', period=365)\n",
-                        "/tmp/ipykernel_580/716599735.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/716599735.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  decomp_flow_rate = seasonal_decompose(df_Bilancino['Flow_Rate'].fillna(method='ffill'), model='additive', period=365)\n"
                     ]
                 },
@@ -642,16 +653,16 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_580/2511227491.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/2511227491.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_acf(df_Bilancino['Lake_Level'].fillna(method='ffill'), lags=50, ax=ax[0])\n",
-                        "/tmp/ipykernel_580/2511227491.py:7: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/2511227491.py:7: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_pacf(df_Bilancino['Lake_Level'].fillna(method='ffill'), lags=50, ax=ax[1])\n"
                     ]
                 },
@@ -669,9 +680,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_580/2511227491.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/2511227491.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_acf(df_Bilancino['Flow_Rate'].fillna(method='ffill'), lags=50, ax=ax[0])\n",
-                        "/tmp/ipykernel_580/2511227491.py:16: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/2511227491.py:16: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_pacf(df_Bilancino['Flow_Rate'].fillna(method='ffill'), lags=50, ax=ax[1])\n"
                     ]
                 },
@@ -719,7 +730,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
@@ -733,7 +744,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_580/2161570014.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/2161570014.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  adf_test(df_Bilancino['Lake_Level'].fillna(method='ffill'))\n"
                     ]
                 },
@@ -756,7 +767,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_580/2161570014.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_7457/2161570014.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  adf_test(df_Bilancino['Flow_Rate'].fillna(method='ffill'))\n"
                     ]
                 },
@@ -807,32 +818,24 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Lake level model"
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Performing stepwise search to minimize aic\n"
-                    ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "/tmp/ipykernel_580/3161178406.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-                        "  sarima_model = auto_arima(df_Bilancino['Flow_Rate'].fillna(method='ffill'),\n"
-                    ]
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        " ARIMA(2,0,2)(1,0,1)[52] intercept   : AIC=26135.279, Time=20.50 sec\n",
-                        " ARIMA(0,0,0)(0,0,0)[52] intercept   : AIC=34199.863, Time=0.06 sec\n",
-                        " ARIMA(1,0,0)(1,0,0)[52] intercept   : AIC=26513.087, Time=11.91 sec\n"
+                        "Performing stepwise search to minimize aic\n",
+                        " ARIMA(2,1,2)(1,0,1)[52] intercept   : AIC=-11651.373, Time=18.50 sec\n",
+                        " ARIMA(0,1,0)(0,0,0)[52] intercept   : AIC=-10212.934, Time=0.45 sec\n"
                     ]
                 },
                 {
@@ -857,12 +860,12 @@
                 "from pmdarima import auto_arima\n",
                 "\n",
                 "# Find the best SARIMA model\n",
-                "sarima_model = auto_arima(df_Bilancino['Flow_Rate'].fillna(method='ffill'), \n",
+                "sarima_model = auto_arima(df_Bilancino['Lake_Level'].ffill(), \n",
                 "                          seasonal=True, m=52, # weekly iteration. (he tenido que bajar el seasonal period a semanal y poner un máximo de iteraciones por búsqueda para que mi ordenador pudiera entrenar el modelo)\n",
                 "                          trace=True,\n",
                 "                          error_action='warn',  \n",
                 "                          suppress_warnings=True,\n",
-                "                          maxiter=3, # Maximum iterations by search\n",
+                "                          maxiter=2, # Maximum iterations by search\n",
                 "                          stepwise=True)\n",
                 "\n"
             ]
